--- a/references.bib
+++ b/references.bib
@@ -122,3 +122,18 @@ articleno = {15},
 numpages = {71},
 keywords = {C language, Partial programs, parsing, type inference}
 }
+
+
+@Article{information,
+AUTHOR = {He, Xie and Lashkari, Arash Habibi and Vombatkere, Nikhill and Sharma, Dilli Prasad},
+TITLE = {Authorship Attribution Methods, Challenges, and Future Research Directions: A Comprehensive Survey},
+JOURNAL = {Information},
+VOLUME = {15},
+YEAR = {2024},
+NUMBER = {3},
+ARTICLE-NUMBER = {131},
+URL = {https://www.mdpi.com/2078-2489/15/3/131},
+ISSN = {2078-2489},
+ABSTRACT = {Over the past few decades, researchers have put their effort and paid significant attention to the authorship attribution field, as it plays an important role in software forensics analysis, plagiarism detection, security attack detection, and protection of trade secrets, patent claims, copyright infringement, or cases of software theft. It helps new researchers understand the state-of-the-art works on authorship attribution methods, identify and examine the emerging methods for authorship attribution, and discuss their key concepts, associated challenges, and potential future work that could help newcomers in this field. This paper comprehensively surveys authorship attribution methods and their key classifications, used feature types, available datasets, model evaluation criteria and metrics, and challenges and limitations. In addition, we discuss the potential future research directions of the authorship attribution field based on the insights and lessons learned from this survey work.},
+DOI = {10.3390/info15030131}
+}
